# dotfiles

./: .bash_aliases  .bashrc  .clang-format  .gitignore  .tmux.conf  .vimrc  alacritty.yml  create-symlinks.sh  init.vim  install-firefox.sh  install-fonts.sh  install-i3blocks.sh  install-ly.sh  install-neovim.sh  install-st.sh  install-tela-icons.sh  install.sh  sync-dotfiles
.config/alacritty/: alacritty.toml  gruvbox.toml
.config/alacritty/alacritty/: alacritty.toml
.config/dunst/: dunstrc
.config/fontconfig/: fonts.conf
.config/i3/: config
.config/i3-minimal/: config
.config/i3blocks/: config
.config/i3status/: config
.config/i3status-rust/: config.toml
.config/nvim/: 123.md  init.lua  lazy-lock.json
.config/nvim/ftplugin/: c.lua  cpp.lua  cs.lua  lua.lua  markdown.lua
.config/nvim/lua/: plugins-setup.lua
.config/nvim/plugin/: floating_terminal.lua
alacritty/: alacritty.yml  gruvbox.yml
config/alacritty/: alacritty.yml
config/i3/: config
config/i3blocks/: config
config/i3status/: config
config/nvim/: lazy-lock.json
config/nvim/ftplugin/: cpp.lua  cs.lua
dunst/: dunstrc
i3/: config
i3blocks/: config
i3status/: config
nvim/: init.lua  lazy-lock.json  old_init.vim
nvim/ftplugin/: cs.lua  python.lua  tex.lua
nvim/lua/config/: lualine.lua  (+1 more)
nvim/plugin/: packer_compiled.lua
scripts/: antilocker.sh  cgen.sh  decrypt.sh  encrypt.sh  lock.sh  rgv  sync-dotfiles  syns-notes.sh  ttimer.sh
scripts/cmakegen-src/: CMakeLists.txt  main.cpp
scripts/i3blocks-scripts/: battery  togglemouse  volume
st/: config.def.h
(+69 files in other folders)
